# typeness

./: .gitignore  README.md  Typeness.spec  build_mac_app.sh  icon.icns  pyproject.toml
src/typeness/: __main__.py  audio.py  clipboard.py  floating.py  hotkey.py  login_item.py  main.py  menubar.py  postprocess.py  replay.py  settings.py  settings_ui.py  transcribe.py
