[project]
name = "typeness"
version = "0.1.0"
description = "Local voice input tool that converts speech to structured written text"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mlx-whisper",
    "mlx-lm",
    "sounddevice",
    "numpy",
    "pynput",
    "pyperclip",
    "rumps",
    "scipy>=1.15.3",
]

[project.scripts]
typeness = "typeness.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typeness"]

